--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-_output/
-node_modules/
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lib-cov
+coverage
+!**/integrations/coverage
+node_modules
+.env
+.cache
+dist
+output
+!test/core/output
+test/core/output/*.md
+.idea
+.vite-node
+ltex*
+.DS_Store
+.eslintcache
