--- a/package.json
+++ b/package.json
@@ -1,20 +1,50 @@
 {
-  "name": "generate-readme-from-template",
+  "name": "@grft/monorepo",
   "version": "0.1.0",
+  "type": "module",
+  "private": true,
+  "packageManager": "pnpm@8.6.1",
   "description": "Generate readme file from template file",
-  "main": "src/index.ts",
+  "license": "MIT",
+  "sideEffects": true,
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
-  },
-  "dependencies": {
-    "mustache": "^4.2.0",
-    "tiny-glob": "^0.2.9"
+    "build": "pnpm -r --filter='./packages/**' run build",
+    "ci": "ni && nr typecheck && nr lint && nr build && nr test:ci",
+    "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
+    "lint:fix": "nr lint --fix",
+    "lint": "eslint --cache .",
+    "start": "nodemon --exec ts-node src/index.ts",
+    "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public",
+    "test": "vitest --api -r test/core",
+    "test:run": "vitest run -r test/core",
+    "test:all": "CI=true pnpm -r --stream run test --allowOnly",
+    "test:ci": "CI=true pnpm -r --stream --filter !test-fails run test --allowOnly",
+    "typecheck": "tsc --noEmit",
+    "typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.39.5",
+    "@antfu/ni": "^0.21.4",
     "@types/node": "^20.2.5",
+    "bumpp": "^9.1.1",
+    "eslint": "^8.42.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
+    "pnpm": "^8.6.1",
+    "rimraf": "^5.0.1",
+    "simple-git-hooks": "^2.8.1",
+    "typescript": "^5.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "tsup": "^6.7.0",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.0"
   },
-  "keywords": []
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{[jt]s?(x),vue,md}": [
+      "eslint --cache --fix"
+    ]
+  }
 }
