--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "pnpm -r --filter='./packages/**' run build",
     "ci": "ni && nr typecheck && nr lint && nr build && nr test:ci",
+    "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -rf .eslintcache node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
     "lint:fix": "nr lint --fix",
     "lint": "eslint --cache .",
@@ -28,14 +29,14 @@
     "@types/node": "^20.2.5",
     "bumpp": "^9.1.1",
     "eslint": "^8.42.0",
+    "esno": "^0.16.3",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "pnpm": "^8.6.1",
-    "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
-    "typescript": "^5.1.0",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
+    "typescript": "^5.1.0",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
   },
