--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,35 @@ jobs:
       - name: Lint
         run: pnpm run lint
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/setup-and-cache
+
+      - name: Install
+        run: pnpm i
+
+      - name: Build
+        run: pnpm run build
+
+  dev:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/setup-and-cache
+
+      - name: Install
+        run: pnpm i
+
+      - name: Build
+        run: pnpm run build
+
+      - name: Dev
+        run: pnpm run dev
+
   typecheck:
     runs-on: ubuntu-latest
     steps:
@@ -69,5 +98,8 @@ jobs:
       - name: Install
         run: pnpm i
 
+      - name: Build
+        run: pnpm run buil
+
       - name: Test
-        run: pnpm run test:ci
+        run: pnpm run ci
