--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@grft/monorepo",
-  "version": "0.1.0",
   "type": "module",
+  "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.6.1",
   "description": "Generate readme file from template file",
@@ -9,17 +9,16 @@
   "sideEffects": true,
   "scripts": {
     "build": "pnpm -r --filter='./packages/**' run build",
-    "ci": "ni && nr typecheck && nr lint && nr build && nr test:ci",
+    "ci": "ni && nr typecheck && nr lint:fix && nr build && nr test:ci",
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -rf .eslintcache node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
     "lint:fix": "nr lint --fix",
     "lint": "eslint --cache .",
     "start": "nodemon --exec ts-node src/index.ts",
     "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public",
-    "test": "vitest --api -r test/core",
-    "test:run": "vitest run -r test/core",
-    "test:all": "CI=true pnpm -r --stream run test --allowOnly",
-    "test:ci": "CI=true pnpm -r --stream --filter !test-fails run test --allowOnly",
+    "test": "vitest --api -r test",
+    "test:run": "vitest run -r test",
+    "test:ci": "CI=true pnpm -r --stream run test && nr test:run",
     "typecheck": "tsc --noEmit",
     "typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt"
   },
@@ -28,23 +27,27 @@
     "@antfu/ni": "^0.21.4",
     "@types/node": "^20.2.5",
     "bumpp": "^9.1.1",
+    "cli": "^1.0.1",
     "eslint": "^8.42.0",
     "esno": "^0.16.3",
+    "execa": "^7.1.1",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "pnpm": "^8.6.1",
+    "serialize-error": "^11.0.0",
     "simple-git-hooks": "^2.8.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.1.0",
     "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "pnpm ci && npx lint-staged"
   },
   "lint-staged": {
-    "*.{[jt]s?(x),vue,md}": [
+    "*.{[jt]s?(x),md}": [
       "eslint --cache --fix"
     ]
   }
