--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
@@ -14,17 +17,27 @@
     "declaration": true,
     "inlineSourceMap": true,
     "paths": {
-      "@grft/cli": ["./packages/cli/src/cli.ts"],
-      "@grft/core": ["./packages/core/src/index.ts"],
+      "@grft/cli": [
+        "./packages/cli/src/cli.ts"
+      ],
+      "@grft/core": [
+        "./packages/cli/src/constants.ts",
+        "./packages/core/src/index.ts",
+        "./packages/cli/src/utils.ts"
+      ],
+      "grft": [
+        "./packages/grft/src/index.ts"
+      ]
     },
     "types": [
-      "node",
+      "node"
     ]
   },
   "exclude": [
     "**/dist/**",
     "./packages/cli/dist/**",
     "./packages/core/dist/**",
+    "./packages/grft/dist/**",
     "./packages/*/*.d.ts",
     "./packages/*/*.d.cts"
   ]
