fix: readme and ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
         run: pnpm i
 
       - name: Build
-        run: pnpm run buil
+        run: pnpm run build
 
       - name: Test
         run: pnpm run ci
