--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Typecheck
         run: pnpm run typecheck
 
-  test:
+  all:
     runs-on: ${{ matrix.os }}
 
     timeout-minutes: 30
@@ -98,8 +98,5 @@ jobs:
       - name: Install
         run: pnpm i
 
-      - name: Build
-        run: pnpm run build
-
       - name: Test
-        run: pnpm run ci
+        run: pnpm run all
