--- a/.github/workflows/lock-closed-issues.yml
+++ b/.github/workflows/lock-closed-issues.yml
@@ -2,7 +2,7 @@ name: Lock Closed Issues
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
 
 permissions:
   issues: write
@@ -15,10 +15,10 @@ jobs:
       - uses: dessant/lock-threads@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-inactive-days: '14'
+          issue-inactive-days: "14"
           # issue-comment: |
           #  This issue has been locked since it has been closed for more than 14 days.
           #
           #  If you have found a concrete bug or regression related to it, please open a new [bug report](https://github.com/rjoydip/grft/issues/new/choose) with a reproduction against the latest Grft version. If you have any other comments you should create a new [discussion](https://github.com/rjoydip/grft/discussions).
-          issue-lock-reason: ''
+          issue-lock-reason: ""
           process-only: issues
