--- a/package.json
+++ b/package.json
@@ -1,54 +1,78 @@
 {
-  "name": "@grft/monorepo",
+  "name": "grft-monorepo",
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.6.1",
+  "packageManager": "pnpm@8.6.2",
   "description": "Generate readme file from template file",
   "license": "MIT",
   "sideEffects": true,
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
+  },
+  "bin": {
+    "grft": "bin/grft.mjs"
+  },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
+    "format": "prettier --write --cache .",
+    "lint": "eslint --cache .",
+    "lint:fix": "nr lint --fix",
     "build": "pnpm -r --filter='./packages/**' run build",
-    "ci": "ni && nr typecheck && nr lint:fix && nr build && nr test:ci",
+    "start": "nodemon --exec ts-node src/index.ts",
+    "all": "ni && nr typecheck && nr format && nr lint:fix && nr build && nr test:ci",
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -rf .eslintcache node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
-    "lint:fix": "nr lint --fix",
-    "lint": "eslint --cache .",
-    "start": "nodemon --exec ts-node src/index.ts",
     "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public",
-    "test": "vitest --api -r test",
-    "test:run": "vitest run -r test",
+    "test": "vitest --api -r packages",
+    "test:run": "vitest run -r packages",
     "test:ci": "CI=true pnpm -r --stream run test && nr test:run",
-    "typecheck": "tsc --noEmit",
-    "typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.5",
     "@antfu/ni": "^0.21.4",
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@vitejs/release-scripts": "^1.2.0",
     "bumpp": "^9.1.1",
     "cli": "^1.0.1",
     "eslint": "^8.42.0",
+    "eslint-define-config": "^1.20.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-regexp": "^1.15.0",
     "esno": "^0.16.3",
     "execa": "^7.1.1",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
-    "pnpm": "^8.6.1",
+    "pnpm": "^8.6.2",
+    "prettier": "^2.8.8",
     "serialize-error": "^11.0.0",
     "simple-git-hooks": "^2.8.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
+    "typedoc": "0.24.8",
     "typescript": "^5.1.0",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "pnpm exec lint-staged --concurrent false"
   },
   "lint-staged": {
-    "*.{[jt]s?(x),md}": [
-      "eslint --cache --fix"
+    "*": [
+      "prettier --write --cache --ignore-unknown",
+      "git add"
+    ],
+    "*.{[jt]s?(x)}": [
+      "eslint --cache --fix",
+      "git add"
     ]
+  },
+  "stackblitz": {
+    "startCommand": "nr dev"
   }
 }
