--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:fix": "nr lint --fix",
     "build": "pnpm -r --filter='./packages/**' run build",
     "start": "nodemon --exec ts-node src/index.ts",
-    "all": "ni && nr typecheck && nr format && nr lint:fix && nr build && nr test:ci",
+    "all": "ni && nu && nr typecheck && nr format && nr lint:fix && nr build && nr test:ci",
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -rf .eslintcache node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
     "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public",
@@ -29,13 +29,13 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
-    "@types/node": "^20.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "@vitejs/release-scripts": "^1.2.0",
     "bumpp": "^9.1.1",
     "cli": "^1.0.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-define-config": "^1.20.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
@@ -51,10 +51,10 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typedoc": "0.24.8",
-    "typescript": "^5.1.0",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false"
