--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "build": "pnpm -r --filter='./packages/**' run build",
-    "start": "nodemon --exec ts-node src/index.ts",
-    "all": "ni && nu && nr typecheck && nr format && nr lint:fix && nr build && nr test:ci",
-    "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -rf .eslintcache node_modules",
+    "all": "nr clean && ni && nu && nr typecheck && nr format && nr lint:fix && nr build && nr test:ci",
+    "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rm -r .eslintcache",
+    "clean:nm": "pnpm -r --parallel --filter='./packages/**' run clean:nm && rm -r packages/node_modules node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
-    "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public",
     "test": "vitest --api -r packages",
     "test:run": "vitest run -r packages",
     "test:ci": "CI=true pnpm -r --stream run test && nr test:run",
@@ -32,25 +31,18 @@
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
-    "@vitejs/release-scripts": "^1.2.0",
-    "bumpp": "^9.1.1",
-    "cli": "^1.0.1",
     "eslint": "^8.43.0",
     "eslint-define-config": "^1.20.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-regexp": "^1.15.0",
     "esno": "^0.16.3",
-    "execa": "^7.1.1",
     "lint-staged": "^13.2.2",
-    "nodemon": "^2.0.22",
     "pnpm": "^8.6.2",
     "prettier": "^2.8.8",
-    "serialize-error": "^11.0.0",
     "simple-git-hooks": "^2.8.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "typedoc": "0.24.8",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
