--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "vitest": "^0.32.2"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm exec lint-staged --concurrent false && pnpm run all"
+    "pre-commit": "pnpm exec lint-staged --concurrent false"
   },
   "lint-staged": {
     "*": [
