chore: removed git-cliff and added: release

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,12 @@
   "cSpell.words": [
     "antfu",
     "bumpp",
+    "changelogithub",
     "cliname",
     "esno",
     "endfor",
     "execa",
     "grft",
-    "iife",
-    "onwarn",
     "preinstall",
     "tmpl",
     "typecheck",
