--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
+    "prepublish": "nr all",
     "format": "prettier --write --cache .",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
@@ -21,6 +22,8 @@
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean",
     "clean:nm": "pnpm -r --parallel --filter='./packages/**' run clean:nm && rm -r packages/node_modules node_modules",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag",
+    "publish": "pnpm -r publish --access public",
     "test": "vitest --api -r packages",
     "test:run": "vitest run -r packages",
     "test:ci": "CI=true pnpm -r --stream run test && nr test:run",
@@ -31,6 +34,7 @@
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "bumpp": "^9.1.1",
     "eslint": "^8.43.0",
     "eslint-define-config": "^1.20.0",
     "eslint-plugin-import": "^2.27.5",
