ci: commitlint added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "cSpell.words": [
     "antfu",
     "bumpp",
-    "changelogithub",
+    "commitlint",
     "cliname",
     "esno",
     "endfor",
