--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "pnpm": "^8.6.2",
     "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1",
-    "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
@@ -57,10 +56,11 @@
   },
   "lint-staged": {
     "*": [
-      "prettier --write --cache --ignore-unknown"
+      "nr format"
     ],
-    "*.{[jt]s?(x)}": [
-      "eslint --cache --fix"
+    "*.[jt]s?(x)": [
+      "nr typecheck",
+      "nr lint:fix"
     ]
   },
   "stackblitz": {
