Feature: added code coverage in code and CI (#2)
* feat: enabled code coverage, refactor: unit test code and cleanup npm scripts

* fix: vitest config file and test coverage npm script

* fix(typo): test coverage before report action

* fix: typo multiline pnpm cmd

* ci: change vitest coverage report working directory

* chore: change reportsDirectory to root level

* chore: added json-summary in coverage reporter

* ci: test-cli strategy matrix sequence changed

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,16 @@
-packages/*/CHANGELOG.md
+.github
+.vscode
+.stackblitz
+.prettierignore
 dist/
 temp/
+fixtures/
+coverage/
+node_modules/
 LICENSE.md
+CHANGELOG.md
+CODE_OF_CONDUCT.md
+package.json
 pnpm-lock.yaml
 pnpm-workspace.yaml
+packages/*/CHANGELOG.md
