--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,6 @@ jobs:
       - name: Install
         run: pnpm i
 
-      - name: Build
-        run: pnpm run build
-
       - name: Dev
         run: pnpm run dev
 
@@ -59,13 +56,10 @@ jobs:
       - name: Install
         run: pnpm i
 
-      - name: Build
-        run: pnpm run build
-
       - name: Typecheck
         run: pnpm run typecheck
 
-  all:
+  test:
     runs-on: ${{ matrix.os }}
 
     timeout-minutes: 30
@@ -92,4 +86,34 @@ jobs:
         run: pnpm i
 
       - name: Test
-        run: pnpm run all
+        run: |
+          pnpm run test:ci
+          pnpm run test:coverage
+
+      - name: Coverage
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
+
+  test_cli:
+    runs-on: ${{ matrix.os }}
+
+    timeout-minutes: 30
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node_version: [16, 18]
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/setup-and-cache
+        with:
+          node-version: ${{ matrix.node_version }}
+
+      - name: Install
+        run: pnpm i
+
+      - name: Test Cli
+        run: pnpm run test:cli
