Feature: Added commit lint through commit-msg hooks (#3)
* feat: added commitlint
* chore: implement commit validation through commit-msg hooks

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
@@ -59,6 +61,7 @@
     "vitest": "^0.32.2"
   },
   "simple-git-hooks": {
+    "commit-msg": "echo $(cat .git/COMMIT_EDITMSG) | npx commitlint",
     "pre-commit": "pnpm exec lint-staged --concurrent false"
   },
   "lint-staged": {
