feat: added markdown linting (#4)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,21 @@
   "cSpell.words": [
     "antfu",
     "bumpp",
-    "commitlint",
     "cliname",
+    "commitlint",
     "EDITMSG",
-    "esno",
     "endfor",
+    "esno",
     "execa",
     "grft",
+    "Joydip",
+    "npmjs",
     "preinstall",
-    "tmpl",
-    "typecheck",
-    "tsup",
+    "rjoydip",
     "stackblitz",
+    "tmpl",
+    "tsup",
+    "typecheck",
     "unmock"
   ],
   "editor.formatOnSave": false,
