--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
 
 concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
@@ -58,6 +61,21 @@ jobs:
 
       - name: Typecheck
         run: pnpm run typecheck
+
+  markdown_lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/setup-and-cache
+
+      - name: Install
+        run: pnpm i
+
+      - name: Markdown Lint
+        run: pnpm run markdown:lint
 
   test:
     runs-on: ${{ matrix.os }}
