Feature: added mega-linter (#8)
* feat: mega linter for doing entire application 2nd layer linting

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,6 +1,8 @@
-- name: auto merge for dependabot
-  conditions:
-    - author~=^dependabot(|-preview)\[bot\]$
-  actions:
-    merge:
-      method: squash
+---
+pull_request_rules:
+  - name: auto merge for dependabot
+    conditions:
+      - author~=^dependabot(|-preview)\[bot\]$
+    actions:
+      merge:
+        method: squash
