--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,10 @@
 .github
 .vscode
+.npmrc
 .stackblitz
+.gitignore
+.editorconfig
+.gitattributes
 .prettierignore
 .markdownlintignore
 dist/
@@ -8,10 +12,6 @@ temp/
 fixtures/
 coverage/
 node_modules/
-LICENSE.md
-CHANGELOG.md
-CODE_OF_CONDUCT.md
 package.json
 pnpm-lock.yaml
 pnpm-workspace.yaml
-packages/*/CHANGELOG.md
