--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
+---
 name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
 
 concurrency:
@@ -22,6 +23,9 @@ jobs:
 
       - name: Lint
         run: pnpm run lint
+
+      - name: Markdown Lint
+        run: pnpm run markdown:lint
 
   build:
     runs-on: ubuntu-latest
@@ -62,23 +66,11 @@ jobs:
       - name: Typecheck
         run: pnpm run typecheck
 
-  markdown_lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - uses: ./.github/actions/setup-and-cache
-
-      - name: Install
-        run: pnpm i
-
-      - name: Markdown Lint
-        run: pnpm run markdown:lint
-
   test:
     runs-on: ${{ matrix.os }}
+
+    permissions:
+      pull-requests: write
 
     timeout-minutes: 30
 
