--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "lint:fix": "nr lint --fix",
     "build": "pnpm -r --filter='./packages/**' run build",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
-    "publish": "pnpm -r publish --access public",
-    "release": "bumpp package.json packages/**/package.json --commit --push --tag",
-    "test": "vitest packages",
+    "test": "vitest -r packages",
     "test:ci": "CI=true nr test:run",
     "test:cli": "pnpm -r --stream run test:cli",
     "test:coverage": "nr test:run --coverage",
     "test:coverage:preview": "nr test:ui --coverage",
     "test:ui": "vitest -r packages --ui",
     "test:run": "vitest run -r packages",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "pnpm -r --parallel --filter='./packages/**' run typecheck",
     "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md ",
+    "publish": "pnpm -r publish --access public",
+    "release": "bumpp package.json packages/**/package.json --commit --push --tag",
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rimraf .eslintcache coverage",
     "clean:nm": "pnpm -r --parallel --filter='./packages/**' run clean:nm && rimraf packages/node_modules node_modules",
     "all": "nr clean && ni && nu && nr typecheck && nr format && nr lint:fix && nr markdown:lint && nr build && nr test:ci && nr test:coverage"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
