--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,7 @@
     "dev": "esno ./src/cli.ts -v",
     "clean": "rimraf package-lock.json dist",
     "clean:nm": "rimraf node_modules",
+    "typecheck": "tsc --noEmit",
     "test:cli": "ni && nr build && pnpm link . && npx grft -v && rm -r node_modules/{@grft,.bin/*grft*}"
   },
   "dependencies": {
