Feature: added storybook for UI component (#14)
* feat: added ui component basic setup and storybook setup

* fix: ci issues

* chore: pkg updated

* fix: megalinter issues of trivy and djlint

* docs: added megalinter badge and fix: typo

* feat: added storybook in UI

* chore: exclude storybook-static directory for DJLINT, HTMLHINT

* chore: exclude storybook-static directory for EDITORCONFIG

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -15,6 +15,10 @@ env:
   SPELL_CSPELL_ARGUMENTS: --root /
   REPOSITORY_TRIVY_ARGUMENTS: --skip-dirs node_modules
   REPOSITORY_CHECKOV_ARGUMENTS: -d . --skip-check CKV2_GHA_1
+  HTML_DJLINT_FILTER_REGEX_EXCLUDE: storybook-static
+  HTML_HTMLHINT_FILTER_REGEX_EXCLUDE: storybook-static
+  SPELL_CSPELL_FILTER_REGEX_EXCLUDE: storybook-static
+  EDITORCONFIG_EDITORCONFIG_CHECKER_FILTER_REGEX_EXCLUDE: storybook-static
   YAML_V8R_FILTER_REGEX_EXCLUDE: (pnpm-lock.yaml|pnpm-workspace.yaml|.github/mergify.yml|.github/ISSUE_TEMPLATE/config.yml|.github/ISSUE_TEMPLATE/bug_report.yml)
 
 
