--- a/package.json
+++ b/package.json
@@ -38,31 +38,30 @@
     "release": "bumpp package.json packages/**/package.json --commit --push --tag",
     "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rimraf .eslintcache coverage",
     "clean:nm": "pnpm -r --parallel --filter='./packages/**' run clean:nm && rimraf packages/node_modules node_modules",
-    "all": "nr clean && ni && nu && nr typecheck && nr format && nr lint:fix && nr markdown:lint && nr build && nr test:ci && nr test:coverage"
+    "all": "nr clean && ni && nr typecheck && nr format && nr lint:fix && nr markdown:lint && nr test:coverage"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@types/node": "^20.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-v8": "^0.32.2",
-    "@vitest/ui": "^0.32.2",
     "bumpp": "^9.1.1",
     "eslint": "^8.43.0",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-regexp": "^1.15.0",
     "esno": "^0.16.3",
     "lint-staged": "^13.2.2",
     "markdown-link-check": "^3.11.2",
-    "pnpm": "^8.6.3",
+    "pnpm": "^8.6.5",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
-    "tsup": "^7.0.0",
+    "tsup": "^7.1.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
