--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,17 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "clean": "rimraf storybook-static",
+    "prepublish": "nr build",
+    "postinstall": "nr build",
+    "clean": "rimraf dist coverage storybook-static",
+    "clean:nm": "rimraf node_modules",
+    "build": "nr clean && tsup && nr storybook:build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "storybook:build": "storybook build",
+    "storybook:test": "test-storybook --url http://127.0.0.1:6006 --coverage",
+    "storybook:preview": "vite preview --outDir storybook-static --host 0.0.0.0 --port 6006 --strictPort true",
+    "wait-on-tcp": "wait-on tcp:6006",
+    "test": "",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -24,11 +29,9 @@
     "@storybook/blocks": "7.0.23",
     "@storybook/preact": "^7.0.23",
     "@storybook/preact-vite": "7.0.23",
-    "@storybook/testing-library": "0.2.0",
+    "@storybook/test-runner": "^0.11.0",
     "@types/react": "^18.2.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "storybook": "7.0.23",
-    "vite": "^4.3.9"
+    "wait-on": "^7.0.1"
   }
 }
